GNOME Bugzilla – Bug 740265
gupnp-av warns if protocolInfo is missing in DIDL-Lite XML
Last modified: 2019-02-22 05:57:49 UTC
There are some UPnP servers that do not follow the specifications completely and fail to provide protocolInfo in the resource elements. The gupnp-av code then starts to emit critical warnings: CRITICAL **: gupnp_didl_lite_resource_get_protocol_info: assertion 'protocol_info != NULL' failed CRITICAL **: gupnp_protocol_info_is_compatible: assertion 'GUPNP_IS_PROTOCOL_INFO (info2)' failed
Created attachment 290862 [details] [review] Patch to deal more gracefully with missing protocolInfo
Review of attachment 290862 [details] [review]: +1