Avoid warnings when protocolInfo is missing

There should not be run-time warnings when the protocolInfo is
missing in an DIDL-Lite XML fragment.

Signed-off-by: Sven Neumann <neumann@teufel.de>

https://bugzilla.gnome.org/show_bug.cgi?id=740265